#11.3 Next Previous Page Navigation

--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -11,10 +11,21 @@
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
 
-    <h5> Page {{page}} of {{page_count}}</h5>
+    <h5>
+    {% if page is not 1 %}
+        <a href="?page={{page|add:-1}}">Previous</a>
+    {% endif %}
+    
+    Page {{page}} of {{page_count}}
+    
+    {% if not page == page_count  %}
+        <a href="?page={{page|add:1}}">Next</a>
+    {% endif %}
 
-    {% for page in page_range %}
-        <a href="?page={{page}}">{{page}}</a>
-    {% endfor %}
+    </h5>
+
+   
+       
+   
 
 {% endblock content %}
