#11.4 Using Django Paginator

--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -7,25 +7,23 @@
 
 {% block content %}
 
-    {% for room in potato  %}
+    {% for room in rooms.object_list  %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
 
     <h5>
-    {% if page is not 1 %}
-        <a href="?page={{page|add:-1}}">Previous</a>
+    {% if rooms.has_previous %}
+        <a href="?page={{rooms.number|add:-1}}">Previous</a>
     {% endif %}
+
+    Page {{rooms.number}} of {{rooms.paginator.num_pages}}
     
-    Page {{page}} of {{page_count}}
-    
-    {% if not page == page_count  %}
-        <a href="?page={{page|add:1}}">Next</a>
+    {% if rooms.has_next  %}
+        <a href="?page={{rooms.number|add:1}}">Next</a>
     {% endif %}
+
 
     </h5>
 
-   
-       
-   
 
 {% endblock content %}
