#11.5 get_page vs page

--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -7,19 +7,19 @@
 
 {% block content %}
 
-    {% for room in rooms.object_list  %}
+    {% for room in page.object_list  %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %}
 
     <h5>
-    {% if rooms.has_previous %}
-        <a href="?page={{rooms.number|add:-1}}">Previous</a>
+    {% if page.has_previous %}
+        <a href="?page={{page.previous_page_number}}">Previous</a>
     {% endif %}
 
-    Page {{rooms.number}} of {{rooms.paginator.num_pages}}
+    Page {{page.number}} of {{page.paginator.num_pages}}
     
-    {% if rooms.has_next  %}
-        <a href="?page={{rooms.number|add:1}}">Next</a>
+    {% if page.has_next  %}
+        <a href="?page={{page.next_page_number}}">Next</a>
     {% endif %}
 
 
