#12.2 room_detail FBV finished

--- a/templates/rooms/detail.html
+++ b/templates/rooms/detail.html
@@ -6,5 +6,33 @@
 {% endblock page_name %}
 
 {% block content %}
-
+<div>
+    <h1>{{room.name}}</h1>
+    <h3>{{room.description}}</h3>
+</div>
+<div>
+    <h2>By: {{room.host.username}}
+    {% if room.host.superhost %}
+        (superhost)
+    {% endif %}
+    </h2>
+    <h3>Amenities</h3>
+    <ul>
+    {% for a in room.amenities.all  %}
+        <li>{{a}}</li>
+    {% endfor %}
+    </ul>
+    <h3>Facilities</h3>
+    <ul>
+    {% for a in room.facilities.all  %}
+        <li>{{a}}</li>
+    {% endfor %}
+    </ul>
+    <h3>House Rules</h3>
+    <ul>
+    {% for a in room.house_rules.all  %}
+        <li>{{a}}</li>
+    {% endfor %}
+    </ul>
+</div>
 {% endblock %}
