#13.0 Template, Form, Url, Setup

--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    Not found
+    Search
 {% endblock page_title %}
 
 {% block content %}
 
-    <h1>Not found baby</h1>
+    <h2>Search!</h2>
 
+    <h4>Searching by {{city}}</h4>
 
 {% endblock content %}
