--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -4,10 +4,39 @@
     Search
 {% endblock page_title %}
 
+{% block search-bar %}
+{% endblock search-bar %}
+
 {% block content %}
 
     <h2>Search!</h2>
 
-    <h4>Searching by {{city}}</h4>
+    <form method="get" action="{% url "rooms:search" %}">
+        <div>
+            <label for="city">City</label>
+            <input value="{{city}}" id="city" name="city" placeholder="Search By City" />
+        </div>
+
+        <div>
+            <label for="country">Country</label>
+            <select id="country" name="country" >
+                {% for country in countries  %}
+                    <option value="{{country.code}}">{{country.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <div>
+            <label for="room_type">Room Type</label>
+            <select id="room_type" name="room_type" >
+                {% for room_type in room_types  %}
+                    <option value="{{room_type.pk}}">{{room_type.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <button>Search</button>
+    </form>
+
+
 
 {% endblock content %}
