#13.5 Filering Like a Boss part One

--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -104,6 +104,12 @@
         <button>Search</button>
     </form>
 
+    <h3>Results</h3>
+
+    {% for room in rooms %}
+        <h3>{{room.name}}</h3>
+    {% endfor %}
+
 
 
 {% endblock content %}
