--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -6,6 +6,7 @@
         <li><a href="{% url "users:logout" %}">Log out</a></li>
     {% else %}
         <li><a href="{% url "users:login" %}">Log in</a></li>
+        <li><a href="{% url "users:signup" %}">Sign up</a></li>
     {% endif %}
         
     
