--- a/templates/base.html
+++ b/templates/base.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>{% block page_title %}{% endblock page_title %}| Nbnb</title>
   </head>
-  <body>
-    <header>
-      {% include "partials/nav.html" %}
-      {% block search-bar %}
-        <form method="get" action="{% url "rooms:search" %}">
-            <input name="city" placeholder="Search By City" />
+  <body class="text-gray-800">
+    <header class="container max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400">
+      <div class="flex items-center">
+        <a href="{% url "core:home" %}" class="mr-6">
+            <img class="w-8" src="{% static 'img/logo.png' %}" />
+        </a>
+        {% block search-bar %}
+        <form method="get" action="{% url 'rooms:search' %}">
+          <input class="border px-2 py-1 rounded-sm" name="city" placeholder="Search By City" />
         </form>
-      {% endblock search-bar %}
+        {% endblock search-bar %}
+      </div>
+      {% include "partials/nav.html" %}
     </header>
 
     {% block content %}{% endblock %}
