--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,11 +1,8 @@
-
-<a href="{% url "core:home" %}">Nbnb</a>
-<ul>
-    
+<ul class="flex items-center text-sm font-medium">
     {% if user.is_authenticated %}
-        <li><a href="{% url "users:logout" %}">Log out</a></li>
+        <li class="ml-8"><a href="{% url "users:logout" %}">Log out</a></li>
     {% else %}
-        <li><a href="{% url "users:login" %}">Log in</a></li>
-        <li><a href="{% url "users:signup" %}">Sign up</a></li>
+        <li class="ml-8"><a href="{% url "users:login" %}">Log in</a></li>
+        <li class="ml-8"><a href="{% url "users:signup" %}">Sign up</a></li>
     {% endif %}
 </ul>
