--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -7,7 +7,9 @@
 
 {% block content %}
 
-    {{now}}
+    <div class="container rounded-xl mx-auto bg-gray-800  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)">
+
+    </div>
 
     {% for room in rooms  %}
         <h3>
