#20.5 Room Cards part One

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -7,31 +7,28 @@
 
 {% block content %}
 
-    <div class="container rounded-xl mx-auto bg-gray-800  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)">
+    <div class="container mx-auto">
+        
+        <div class="rounded-xl bg-gray-800  -mx-40  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)"></div>
+
+        <div class="flex flex-wrap -mx-40">
+        {% for room in rooms  %}
+            {% include 'partials/room_card.html' with room=room %}
+        {% endfor %}
+        </div>
+        <h5>
+        {% if page_obj.has_previous %}
+            <a href="?page={{page_obj.previous_page_number}}">Previous</a>
+        {% endif %}
+
+        Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+        
+        {% if page_obj.has_next  %}
+            <a href="?page={{page_obj.next_page_number}}">Next</a>
+        {% endif %}
+
+
+        </h5>
 
     </div>
-
-    {% for room in rooms  %}
-        <h3>
-            <a href="{% url "rooms:detail" room.pk %}">
-                {{room.name}} / ${{room.price}}
-            </a>
-        </h3>
-    {% endfor %}
-
-    <h5>
-    {% if page_obj.has_previous %}
-        <a href="?page={{page_obj.previous_page_number}}">Previous</a>
-    {% endif %}
-
-    Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
-    
-    {% if page_obj.has_next  %}
-        <a href="?page={{page_obj.next_page_number}}">Next</a>
-    {% endif %}
-
-
-    </h5>
-
-
 {% endblock content %}
