--- a/templates/partials/room_card.html
+++ b/templates/partials/room_card.html
@@ -1,3 +1,15 @@
 <div class="w-1/4 mb-10 px-2">
-    <div class="w-full h-64 bg-cover bg-center rounded-lg " style="background-image: url({{room.first_photo}});"></div>
+    <div class="w-full h-64 bg-cover bg-center rounded-lg mb-2 " style="background-image: url({{room.first_photo}});"></div>
+    <div class="flex justify-between">
+        <div>
+            
+            {% if room.host.superhost %}
+                <span class="uppercase font-medium text-xs border border-black text-black rounded py-px px-1">Superhost</span>
+            {% endif %}
+            <span class="text-sm text-gray-600">{{room.city}}</span>
+        </div>
+        <span class="text-sm flex items-center">
+            <i class="fas fa-star text-red-500 text-xs mr-1"></i> {{room.total_rating}}
+        </span>
+    </div>
 </div>
