#20.7 Finishing Room Cards and Pagination

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -7,28 +7,32 @@
 
 {% block content %}
 
-    <div class="container mx-auto">
+    <div class="container mx-auto pb-10">
         
         <div class="rounded-xl bg-gray-800  -mx-40  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)"></div>
 
-        <div class="flex flex-wrap -mx-40">
-        {% for room in rooms  %}
-            {% include 'partials/room_card.html' with room=room %}
-        {% endfor %}
+        <div class="flex flex-wrap -mx-40 mb-10">
+            {% for room in rooms  %}
+                {% include 'partials/room_card.html' with room=room %}
+            {% endfor %}
         </div>
-        <h5>
-        {% if page_obj.has_previous %}
-            <a href="?page={{page_obj.previous_page_number}}">Previous</a>
-        {% endif %}
+        <div class="flex items-center justify-center mx-auto container">
+            {% if page_obj.has_previous %}
+                <a href="?page={{page_obj.previous_page_number}}" class="text-teal-500">
+                    <i class="fas fa-arrow-left fa-lg"></i>
+                </a>
+            {% endif %}
 
-        Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
-        
-        {% if page_obj.has_next  %}
-            <a href="?page={{page_obj.next_page_number}}">Next</a>
-        {% endif %}
+            <span class="mx-3 font-medium text-lg">{{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
+            
+            {% if page_obj.has_next  %}
+                <a href="?page={{page_obj.next_page_number}}" class="text-teal-500">
+                    <i class="fas fa-arrow-right fa-lg"></i>
+                </a>
+            {% endif %}
 
 
-        </h5>
+        </div>
 
     </div>
 {% endblock content %}
