#20.8 Footer, Social Login

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -9,11 +9,13 @@
 
 {% block content %}
      
-    {% include 'partials/social_login.html' %}
+    <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
+            {% include 'partials/social_login.html' %}
 
-    <form method="POST" action="{% url "users:login" %}">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button>Login</button>
-    </form>
+            <form method="POST" action="{% url "users:login" %}">
+                {% csrf_token %}
+                {{form.as_p}}
+                <button>Login</button>
+            </form>
+    </div>
 {% endblock content %}
