--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -15,30 +15,27 @@
 
         <form method="POST" action="{% url "users:signup" %}">
             {% csrf_token %}
-            {{form.first_name}}
-            {{form.last_name}}
-            {{form.email}}
             
-            
-            {% if form.errors %}
-                
-                {% for e in form.errors %}
-                    {{e}}
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <span class="text-red-700 font-medium text-sm">{{error}}</span> 
                 {% endfor %}
-                    
             {% endif %}
-                
 
-            {% if form.email.errors %}
-                
-                {% for e in form.email.errors %}
-                    {{e}}
-                {% endfor %}
-                    
-            {% endif %}
-                
-            {{form.password}}
-            {{form.password1}}
+            
+            {% for field in form %}
+                <div class="input w-full {% if field.errors %}has_error{% endif %}">
+                    {{field}}
+                    {% if field.errors %}
+                        {% for error in field.errors %}
+                            <span class="text-red-700 font-medium text-sm">{{error}}</span> 
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            {% endfor %}
+                            
+
+            
             <button class="btn bg-red-500 text-white">Sign up</button>
         </form>
 
