#20.12 SO MUCH EASIER NOW

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -13,7 +13,7 @@
 
         <div class="flex flex-wrap -mx-40 mb-10">
             {% for room in rooms  %}
-                {% include 'partials/room_card.html' with room=room %}
+                {% include 'mixins/room_card.html' with room=room %}
             {% endfor %}
         </div>
         <div class="flex items-center justify-center mx-auto container">
