#21.0 Messages part One

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
 
     {% block content %}{% endblock %}
 
+    {% include "partials/messages.html" %}
     {% include "partials/footer.html" %}
   </body>
 </html>
