--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -6,33 +6,14 @@
 {% endblock page_title %}
 
 {% block content %}
-<div>
-    <h1>{{room.name}}</h1>
-    <h3>{{room.description}}</h3>
-</div>
-<div>
-    <h2>By: <a href="{{room.host.get_absolute_url}}">{{room.host.username}}</a>
-    {% if room.host.superhost %}
-        (superhost)
-    {% endif %}
-    </h2>
-    <h3>Amenities</h3>
-    <ul>
-    {% for a in room.amenities.all  %}
-        <li>{{a}}</li>
-    {% endfor %}
-    </ul>
-    <h3>Facilities</h3>
-    <ul>
-    {% for a in room.facilities.all  %}
-        <li>{{a}}</li>
-    {% endfor %}
-    </ul>
-    <h3>House Rules</h3>
-    <ul>
-    {% for a in room.house_rules.all  %}
-        <li>{{a}}</li>
-    {% endfor %}
-    </ul>
-</div>
+
+    <div class="-mt-5 container max-w-full h-75vh flex mb-20">
+        <div class="h-full w-1/2 bg-center bg-cover" style="background-image:url({{room.first_photo}})"></div>
+        <div class="h-full w-1/2 flex flex-wrap">
+            {% for photo in room.get_next_four_photos %}
+                <div style="background-image:url({{photo.file.url}})" class="w-1/2 h-auto bg-cover bg-center border-gray-700 border"></div>
+            {% endfor %}
+        </div>
+    </div>
+
 {% endblock %}
