--- a/templates/rooms/room_edit.html
+++ b/templates/rooms/room_edit.html
@@ -12,6 +12,10 @@
     <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
 
         {% include 'mixins/room/room_form.html' with form=form cta="Update room" %}
+
+        <div class="mt-5">
+            <a href="#" class="text-teal-500 font-medium">Edit Photos</a>
+        </div>
             
     </div>
 {% endblock content %}
