#23.2 Room Photos part Two

--- a/templates/rooms/room_edit.html
+++ b/templates/rooms/room_edit.html
@@ -14,7 +14,7 @@
         {% include 'mixins/room/room_form.html' with form=form cta="Update room" %}
 
         <div class="mt-5">
-            <a href="#" class="text-teal-500 font-medium">Edit Photos</a>
+            <a href="{% url 'rooms:photos' room.pk %}" class="text-teal-500 font-medium">Edit Photos</a>
         </div>
             
     </div>
