#23.5 Add Photo part One

--- a/templates/rooms/room_photos.html
+++ b/templates/rooms/room_photos.html
@@ -11,6 +11,10 @@
      
     <div class="container mx-auto my-10 flex flex-col">
 
+        <div class="my-10 w-full">
+            <a href="{% url 'rooms:add-photo' room.pk %}" class="btn-link w-1/6 block">Upload Photo</a>
+        </div>
+
         {% for photo in room.photos.all  %}
             <div class="mb-5 border p-6 border-gray-400 flex justify-between">
                 <div class="flex items-start">
