--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -93,11 +93,23 @@
             {% else %}
                 {% if not request.session.is_hosting %}
                     {% for calendar in room.get_calendars %}
-                    <div>
-                      {{calendar.get_month}}/{{calendar.year}}
-                      {% for day in calendar.day_names  %}
-                         {{day}}
-                      {% endfor %}
+                    <div class="mb-20">
+                        <span class="text-center font-semibold text-lg block mb-8">{{calendar.get_month}} / {{calendar.year}}</span>
+                        <div class="cal-grid font-medium mb-4">
+                            {% for day in calendar.day_names  %}
+                                <span>{{day}}</span>
+                            {% endfor %}
+                        </div>
+                        <div class="cal-grid">
+                            {% for day in calendar.get_days  %}
+                                {% if day != 0 %}
+                                  <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-teal-400 hover:text-white cursor-pointer">{{day}}</span>
+                                {% else %}
+                                  <span></span>
+                                {% endif %}
+                                
+                            {% endfor %}
+                        </div>
                     </div>
                     {% endfor %}
                 {% endif %}
