--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -7,9 +7,18 @@
         <span>&copy; 2019 Nomad Coders. {% trans "All rights reserved" %}.</span>
     </div>
     <div class="mt-10 flex">
+        {% get_current_language as LANGUAGE_CODE %}
         <select class="w-1/5 h-8" id="js-lang">
-            <option value="en">English</option>
-            <option value="es">Spanish</option>
+            <option value="en"
+                {% if LANGUAGE_CODE == 'en' %}
+                selected
+                {% endif %}
+            >English</option>
+            <option value="es"
+                {% if LANGUAGE_CODE == 'es' %}
+                    selected
+                {% endif %}
+            >Spanish</option>
         </select>
     </div>
 </footer>
