--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -23,7 +23,7 @@
                 </a>
             {% endif %}
 
-            <span class="mx-3 font-medium text-lg">{{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
+            <span class="mx-3 font-medium text-lg">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
             
             {% if page_obj.has_next  %}
                 <a href="?page={{page_obj.next_page_number}}" class="text-teal-500">
