#25.3 Translating .py Code

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-
-
+{% load i18n %}
 {% block page_title %}
     Home
 {% endblock page_title %}
@@ -23,7 +22,9 @@
                 </a>
             {% endif %}
 
-            <span class="mx-3 font-medium text-lg">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
+            <span class="mx-3 font-medium text-lg">
+                {% blocktrans with current_page=page_obj.number total_pages=page_obj.paginator.num_pages %}Page {{current_page}} of {{total_pages}}{% endblocktrans %}
+            </span>
             
             {% if page_obj.has_next  %}
                 <a href="?page={{page_obj.next_page_number}}" class="text-teal-500">
