--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load static i18n %}
 {% block page_title %}
     Home
 {% endblock page_title %}
@@ -8,7 +8,7 @@
 
     <div class="container mx-auto pb-10">
         
-        <div class="rounded-xl bg-gray-800  -mx-40  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)"></div>
+        <div class="rounded-xl bg-gray-800  -mx-40  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url({% static 'img/bg.jpeg' %});"></div>
 
         <div class="flex flex-wrap -mx-40 mb-10">
             {% for room in rooms  %}
